# EnergyMatchingEqProp

./: .gitignore  README.md  launch_job_cpu.sh  launch_job_gpu.sh  launch_local.sh  launch_submit_cpu.sh  launch_submit_gpu.sh  pyproject.toml  submit_mnist_paper.sh  utils_cifar_imagenet.py
experiments/cifar10/: config_multigpu.py
experiments/mnist/: lid_mnist.py  model.py  train_mnist.py  utils.py
experiments/mnist_from_cifar10/: baseline_time_dependent.py  config_multigpu.py  eval_flow_bins.py  fid_cifar_heun_1gpu.py  generate_from_checkpoint.py  network_cnn.py  network_ep.py  network_ep_cet.py  network_ep_cnn.py  network_ep_mlp.py  network_transformer_vit.py  sample_cifar_heun_1gpu.py  train_cifar_multigpu.py
experiments/mnist_from_cifar10/old/: network_ep_old_big_cnn.py  train_cifar_multigpu_original.py
experiments/mnist_new/: config.py  network.py  sample_mnist.py  train_mnist.py
